cmake_minimum_required(VERSION 3.29.5)
project(vigongin)
set(CMAKE_CXX_STANDARD 11)
link_directories(../src)
include_directories(../lib/raylib/raylib/include)
include_directories(../lib/box2d/include/box2d)
include_directories(../lib/loadtmx)
include_directories(../lib/loadtmx/tinyxml2)
add_library(raylib STATIC IMPORTED)
set_target_properties( raylib PROPERTIES IMPORTED_LOCATION ../../lib/raylib/raylib/libraylib.a )
add_library(Node ../src/Node.cpp)
add_library(Sprite ../src/Sprite.cpp)
add_library(Animation ../src/Animation.cpp)
add_library(Tile ../src/Tile.cpp)
add_library(TileGrid ../src/TileGrid.cpp)
add_library(TileMapLayer ../src/TileMapLayer.cpp)
add_library(TilePalette ../src/TilePalette.cpp)
add_library(GridBrushTool ../src/GridBrushTool.cpp)
add_library(CursorController ../src/CursorController.cpp)